double scroll correction ?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,7 +82,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+ /* overflow-x: hidden; */ trying to remove double scroll 
 }
 
 body {
